[gd_scene load_steps=5 format=3 uid="uid://yqxqtf53b5k2"]

[ext_resource type="Texture2D" uid="uid://di2aaprfupy4i" path="res://assets/Kenney/buttonLong_brown.png" id="1_kvq0m"]
[ext_resource type="Script" uid="uid://5v1mqjbtmuv3" path="res://actions/action_button.gd" id="1_vem8h"]
[ext_resource type="Texture2D" uid="uid://4j12tf2heokg" path="res://assets/Kenney/buttonLong_brown_pressed.png" id="2_mmb1t"]
[ext_resource type="Texture2D" uid="uid://b31df53fnrbeh" path="res://assets/Kenney/buttonLong_blue.png" id="3_kvq0m"]

[node name="ActionButton" type="TextureButton"]
texture_repeat = 3
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_kvq0m")
texture_pressed = ExtResource("2_mmb1t")
texture_hover = ExtResource("2_mmb1t")
texture_disabled = ExtResource("3_kvq0m")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_vem8h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ActionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
clip_contents = false
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "Connect"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 2
text_direction = 3

[node name="CostLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "Cost"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
